--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,7 +1,135 @@
-body{
+body {
 	font-family: "Microsoft YaHei";
 	background-color: #F0F0F0;
 }
-#main{
-	margin: 10%;
+/* tooltip */
+.ui-tooltip {
+	position: absolute;
+	border: 1px solid #353837;
+	color: #fff;
+	background-color: rgba(15, 15, 15, 0.9);
+	padding: 10px;
+	border-radius: 5px;
+	box-shadow: #000 0 0 15px;
+	font-size: 12px;
+	max-width: 400px;
+}
+
+.ui-tooltip h3 {
+	font-size: 16px;
+	font-weight: normal;
+}
+
+.ui-tooltip ul,.ui-tooltip li {
+	list-style-type: none;
+}
+
+.ui-tooltip a {
+	color: white;
+}
+
+.ui-tooltip .tip {
+	border-bottom: 0;
+}
+
+.ui-tooltip .tooltip-content {
+	position: relative;
+}
+
+.ui-tooltip .tooltip-list {
+	margin-top: 10px;
+}
+
+.ui-tooltip .tooltip-list li {
+	margin: 1px 0;
+}
+
+.ui-tooltip .tooltip-list .icon-frame {
+	float: left;
+	margin-right: 5px;
+}
+
+.item-specs {
+	margin: 10px 0 0 0;
+	padding: 0;
+}
+
+.item-specs li {
+	margin: 1px 0;
+	padding: 0;
+}
+
+.item-specs a.color-q1:hover {
+	text-decoration: underline;
+}
+
+.icon-gold {
+	padding-right: 15px;
+	background: url("../images/icons/gold.gif") right center no-repeat;
+}
+
+.icon-silver {
+	padding-right: 15px;
+	padding-left: 3px;
+	background: url("../images/icons/silver.gif") right center no-repeat;
+}
+
+.icon-copper {
+	padding-right: 15px;
+	padding-left: 3px;
+	background: url("../images/icons/copper.gif") right center no-repeat;
+}
+.wiki-tooltip {
+	min-width: 250px;
+}
+/* framed icons */
+.icon-frame {
+	display: inline-block;
+	overflow: hidden;
+	padding: 1px;
+	background-color: #000;
+	background-position: 1px 1px;
+	background-repeat: no-repeat;
+	border-radius: 3px;
+	border: 1px solid #434445;
+	border-bottom-color: #2f3032;
+	border-top-color: #b1b2b4;
+}
+
+.icon-frame img {
+	display: block;
+	vertical-align: bottom;
+}
+.ui-tooltip .frame-56 { 
+	position: absolute; 
+	left: -75px; 
+	top: -30px; 
+}
+.icon-frame.frame-56 {
+	height: 56px;
+	width: 56px;
+	box-shadow: #000 0 0 10px;
+}
+.color-tooltip-yellow {
+	color: #ffd100 !important;
+}
+
+.color-tooltip-red {
+	color: #f00 !important;
+}
+
+.color-tooltip-green {
+	color: #0f0 !important;
+}
+
+.color-tooltip-blue {
+	color: #71D5FF !important;
+}
+
+.color-tooltip-beige {
+	color: #FFFF98 !important;
+}
+
+.color-tooltip-gray {
+	color: #6D6E70 !important;
 }
