--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -141,15 +141,6 @@ footer{
 	width: 100%;
 	padding: 0 30px;
 }
-.input-group .form-control {
-	z-index: 0;
-}
-.tab-pane{
-	/* overflow: scroll;
-	position: fixed;
-	  	width: 100%;
-	  	height: 100%; */
-}
 /* item quality */
 .item-q{ font-weight: bold }
 .item-q0 { color: #9d9d9d } 
@@ -170,12 +161,19 @@ footer{
 .color-q7 { color: #e5cc80 !important; } /* heirloom (gold) */
 
 .gridStyle{
-	border: 1px solid rgb(212,212,212);
-    width: 100%; 
 	position: fixed;
+    width: 100%; 
     height: 100%;
 }
-
 #status{
 	margin-right: 30px;
+}
+label{
+	font-weight: normal;
+}
+.cell-content{
+	padding-left: 5px;
+}
+#toolbar{
+	margin: 5px -10px;
 }
