--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -164,7 +164,8 @@ footer{
 	position: fixed;
     width: 100%; 
     height: 100%;
-    padding-bottom: 40px;
+    min-height: 300px;
+    padding-bottom: 60px;
 }
 #status{
 	margin-right: 30px;
@@ -174,4 +175,7 @@ label{
 }
 #toolbar{
 	margin: 5px -10px;
+}
+.ngViewport{
+	overflow-x: hidden;
 }
